--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			justify-content: center;
 			align-items: center;
 			height: 100vh;
-			font-size: 50rem;
+			font-size: 90vw;
 		}
 	</style>
 </head>
