--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			height: 100vh;
-			font-size: 90vw;
+			height: 90vh;
+			font-size: 60vw;
 		}
 	</style>
 </head>
 
 <body>
-	<div id="main">🐒</div>
+	<div id="main">☆</div>
 </body>
 
 </html>
